--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3 class=subHeader>Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling Europe with my wife and daughter.
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js and express.js.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling Europe with my wife and daughter.
           </p>
         </div>
       </div>
@@ -62,18 +62,18 @@
         <h3 class="subHeader">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
-            <div class="stackText stack-hash" id="stack1">HTML5</div>
-            <div class="stackText stack-hash" id="stack2">CSS3</div>
-            <div class="stackText stack-hash" id="stack3">Sass</div>
-            <div class="stackText stack-hash" id="stack4">jQuery</div>
+            <div class="stackText stack-hash" id="stack1">HTML</div>
+            <div class="stackText stack-hash" id="stack2">CSS/Sass</div>
+            <div class="stackText stack-hash" id="stack3">jQuery</div>
+            <div class="stackText stack-hash" id="stack4">Webpack</div>
             <div class="stackText stack-hash" id="stack5">Git</div>
           </div>
           <div class="toolsRight">
             <div class="stackText stack-hash" id="stack6">JavaScript</div>
             <div class="stackText stack-hash" id="stack7">React</div>
             <div class="stackText stack-hash" id="stack8">Node.js</div>
-            <div class="stackText stack-hash" id="stack9">mongoDB</div>
-            <div class="stackText stack-hash" id="stack10">Express.js</div>
+            <div class="stackText stack-hash" id="stack9">Express.js</div>
+            <div class="stackText stack-hash" id="stack10">Photoshop</div>
           </div>
         </div>
       </div>
