Added dynamic underline who

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg" alt="about">
     <div class="aboutWrapper">
       <div class="me">
-        <h3 class=subHeader>Who Am I?</h3>
+        <h3 class="subHeader whoAmI underlineWho">Who Am I?</h3>
         <div class="aboutMe">
           <p class="text">
            My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js and express.js.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling Europe with my wife and daughter.
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="stack">
-        <h3 class="subHeader">What I Use:</h3>
+        <h3 class="subHeader whatIUse">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
             <div class="stackText stack-hash" id="stack1">HTML</div>
