Add dynamic underline what

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="stack">
-        <h3 class="subHeader whatIUse">What I Use:</h3>
+        <h3 class="subHeader whatIUse underlineWhat">What I Use:</h3>
         <div class="tools">
           <div class="toolsLeft">
             <div class="stackText stack-hash" id="stack1">HTML</div>
