Fixed typo in youtube tv

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
         <div class="portfolioItem">
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg" alt="retro youtube tv">
-        <p class="text">Want to channel surf with YouTube videos? Now you can with the Retro YouTube Television! Each channel plays a different category of video. Check the channel guide for complete lineup.</p>
+        <p class="text">Want to channel-surf with YouTube videos? Now you can with the Retro YouTube Television! Each channel plays a different category of video. Check the channel guide for complete lineup.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and YouTube API</p>
         <div className="buttonWrapper">
