Fixed hovers Firefox

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/portfolioPol.png" class="rollover" id="rolloverPortfolio" alt="portfolio polaroid">
   </div>
 
+
+<!-- About Me -->
   <div class="about">
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg" alt="about">
     <div class="aboutWrapper">
@@ -81,6 +83,7 @@
     <div class="divider">~*~*~*~*~*~*~*~*~*~*~*~*~*~</div>
   </div>
 
+<!-- Portfolio -->
   <div class="portfolio">
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg" alt="portfolio">
     <div class="portfolioGrid">
@@ -142,6 +145,7 @@
     <div class="divider">~*~*~*~*~*~*~*~*~*~*~*~*~*~</div>
   </div>
 
+<!-- Contact -->
   <div class="contact">
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg" alt="contact">
     <div class="contactWrapper">
