--- a/index.html
+++ b/index.html
@@ -106,8 +106,17 @@
         </div>
       </div>
       <div class="portfolioItem">
+        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/padmePol.png" class="portfolioImg" alt="cafe padme">
+        <p class="text">Website created for café/music venue, Padmé. Allows users to view menus and upcoming shows.  Responsive design done with CSS grid and flexbox.</p>
+        <div class="built">Built With:</div>
+        <p class="builtWith">HTML5, CSS3, JavaScript, and jQuery</p>
+        <div className="buttonWrapper">
+          <a href="/projects/padme/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/padme" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
+        </div>
+      </div>
+      <div class="portfolioItem">
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg" alt="hans boathouse">
-        <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Responsive layout created with CSS Grid.</p>
+        <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Allows users to view menus and details about the restaurant. Responsive layout created with CSS Grid.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
@@ -130,15 +139,6 @@
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and YouTube API</p>
         <div className="buttonWrapper">
           <a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/newspaperPol.png" class="portfolioImg" alt="metropolis bugle">
-        <p class="text">Allows you to see all of the lastest news in one place. The Metropolis Bugle will load the lastest headlines upon refresh. Click on the article to view story from original source.</p>
-        <div class="built">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and News API</p>
-        <div className="buttonWrapper">
-          <a href="/projects/newspaper/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
     </div>
