Added portfolio img transitions

--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
       class="titleImg" alt="portfolio">
     <div class="portfolioGrid">
       <div class="portfolioItem">
-        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/lumbarPol.png"
-          class="portfolioImg" alt="lumbar yard">
+        <div class="imgWrapper">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/lumbarPolBlank.png"
+            class="portfolioImg portfolioImgBlank" alt="lumbar yard">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/lumbarPol.png"
+          class="portfolioImg pImg" id="pol1" alt="lumbar yard">
+        </div>
         <p class="text">E-commerce site for mattress company, The Lumbar Yard. The site allows users to search for and
           buy mattresses with any major credit card.</p>
         <div class="built">Built With:</div>
@@ -132,8 +136,12 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillowPol.png"
-          class="portfolioImg" alt="pillow real estate">
+        <div class="imgWrapper">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillowPolBlank.png"
+            class="portfolioImg portfolioImgBlank" alt="pillow real estate">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/pillowPol.png"
+          class="portfolioImg pImg" id="pol3" alt="pillow real estate">
+        </div>
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or
           rent. The design is based on Zillow.com.</p>
         <div class="built">Built With:</div>
@@ -145,8 +153,12 @@
         </div>
       </div>
       <div class="portfolioItem">
-        <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/padmePol.png"
-          class="portfolioImg" alt="cafe padme">
+        <div class="imgWrapper">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/padmePolBlank.png"
+            class="portfolioImg portfolioImgBlank" alt="cafe padme">
+          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/padmePol.png"
+          class="portfolioImg pImg" id="pol2" alt="cafe padme">
+        </div>
         <p class="text">Website created for café/music venue, Padmé. Allows users to view menus and upcoming shows.
           Responsive design done with CSS grid and flexbox.</p>
         <div class="built">Built With:</div>
