Adjusted color scheme

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       class="titleImg" alt="about">
     <div class="aboutWrapper">
       <div class="me">
-        <h3 class="subHeader whoAmI underlineWho">Who Am I?</h3>
+        <h3 class="subHeader whoAmI underlineWho">Who Am I:</h3>
         <div class="aboutMe">
           <p class="text">
             My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end
