Added arrow hover

--- a/index.html
+++ b/index.html
@@ -244,8 +244,11 @@
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail mail-underline"
         aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
-    <img class="arrow" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/arrow.png"
+    <div class="arrowWrapper">
+      <img class="arrow" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/arrow.png"
       alt="arrow">
+      <div class="arrowFiller"></div>
+    </div>
   </div>
 
   <footer>
