Added sticky nav

--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
             <div class="toolSec">
               <div class="stackText stack-hash" id="stack12">Git/Gitflow</div>
               <div class="stackText stack-hash" id="stack13">ESLint</div>
-              <div class="stackText stack-hash" id="stack14">Responsive</div>
-              <div class="stackText stack-hash" id="stack15">Photoshop</div>
+              <div class="stackText stack-hash" id="stack14">AJAX</div>
+              <div class="stackText stack-hash" id="stack15">Responsive</div>
+              <div class="stackText stack-hash" id="stack16">Photoshop</div>
             </div>
           </div>
         </div>
