Updated lumbar to hapi

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p class="text">E-commerce site for mattress company, The Lumbar Yard. The site allows users to search for and
           buy mattresses with any major credit card.</p>
         <div class="built" id="built1">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Express.js</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Hapi.js</p>
         <div className="buttonWrapper">
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/lumbarYard" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
