Added home button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
         <div class="navLinks">
           <a href="javascript:void(0)" class="closeBtn" aria-label="close button"><i class="fas fa-times"></i></a>
+          <a id="home" class="links">Home</a>
           <a id="about" class="links">About</a>
           <a id="portfolio" class="links">Portfolio</a>
           <a id="contact" class="links">Contact</a>
