Adjusted mobile nav

--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
             aria-label="linkedin-icon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
         </div>
         <div class="navLinks">
-          <a href="javascript:void(0)" class="closeBtn" aria-label="close button"><i class="fas fa-times"></i></a>
           <a id="home" class="links">Home</a>
           <a id="about" class="links">About</a>
           <a id="portfolio" class="links">Portfolio</a>
           <a id="contact" class="links">Contact</a>
         </div>
-        <a href="javascript:void(0);" class="hamburger"><i class="fas fa-bars" aria-label="hamburger"></i></a>
+        <a href="javascript:void(0);" class="hamburger"><i class="mobileToggle fas fa-bars" aria-label="hamburger"></i></a>
       </div>
     </div>
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/contact.png"
