--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Jarrod Yellets | Web Developer / React / JavaScript">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#333333">
-  <link rel="icon" href="https://www.jarrodyellets.com/images/polaroidprofileIcon.png">
+  <link rel="icon" href="https://www.jarrodyellets.com/images/portIcon.png">
   <title>Jarrod Yellets</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
