--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <h3 class="subHeader whoAmI underlineWho">Who Am I:</h3>
         <div class="aboutMe">
           <p class="text">
-            My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end
-            development with working knowledge of back-end technologies such as node.js and express.js. When I'm not
+            My name is Jarrod Yellets and I am a full stack web developer and digital nomad residing in Brussels, Belgium.  When I'm not
             behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling
             Europe with my wife and daughter.
           </p>
@@ -104,8 +103,9 @@
               <div class="stackText stack-hash" id="stack12">Git/Gitflow</div>
               <div class="stackText stack-hash" id="stack13">ESLint</div>
               <div class="stackText stack-hash" id="stack14">AJAX</div>
-              <div class="stackText stack-hash" id="stack15">Responsive</div>
-              <div class="stackText stack-hash" id="stack16">Photoshop</div>
+              <div class="stackText stack-hash" id="stack15">GraphQL</div>
+              <div class="stackText stack-hash" id="stack16">Responsive</div>
+              <div class="stackText stack-hash" id="stack17">Photoshop</div>
             </div>
           </div>
         </div>
