Fixed tools mobile layout

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="stackText stack-hash" id="stack11">mongoDB</div>
             </div>
           </div>
-          <div class="toolWrapper">
+          <div class="toolWrapper toolEtc">
             <div class="toolHeader etc">Other</div>
             <div class="toolSec">
               <div class="stackText stack-hash" id="stack12">Git/Gitflow</div>
