Adjusted mobile margin tools

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="stack">
         <h3 class="subHeader whatIUse underlineWhat">What I Use:</h3>
         <div class="tools">
-          <div class="toolWrapper">
+          <div class="toolWrapper toolFront">
             <div class="toolHeader front">Front-End</div>
             <div class="toolSec">
               <div class="stackText stack-hash" id="stack1">HTML</div>
@@ -88,7 +88,7 @@
               <div class="stackText stack-hash" id="stack7">Webpack</div>
             </div>
           </div>
-          <div class="toolWrapper">
+          <div class="toolWrapper toolBack">
             <div class="toolHeader back">Back-End</div>
             <div class="toolSec">
               <div class="stackText stack-hash" id="stack8">Node.js</div>
