Added redux to tools

--- a/index.html
+++ b/index.html
@@ -83,29 +83,31 @@
               <div class="stackText stack-hash" id="stack2">CSS/Sass</div>
               <div class="stackText stack-hash" id="stack3">JavaScript</div>
               <div class="stackText stack-hash" id="stack4">React</div>
-              <div class="stackText stack-hash" id="stack5">jQuery</div>
-              <div class="stackText stack-hash" id="stack6">Bootstrap</div>
-              <div class="stackText stack-hash" id="stack7">Webpack</div>
+              <div class="stackText stack-hash" id="stack5">Redux</div>
+              <div class="stackText stack-hash" id="stack6">jQuery</div>
+              <div class="stackText stack-hash" id="stack7">Bootstrap</div>
+              <div class="stackText stack-hash" id="stack8">Webpack</div>
             </div>
           </div>
           <div class="toolWrapper toolBack">
             <div class="toolHeader back">Back-End</div>
             <div class="toolSec">
-              <div class="stackText stack-hash" id="stack8">Node.js</div>
-              <div class="stackText stack-hash" id="stack9">Express.js</div>
-              <div class="stackText stack-hash" id="stack10">Hapi.js</div>
-              <div class="stackText stack-hash" id="stack11">mongoDB</div>
+              <div class="stackText stack-hash" id="stack9">Node.js</div>
+              <div class="stackText stack-hash" id="stack10">Express.js</div>
+              <div class="stackText stack-hash" id="stack11">Hapi.js</div>
+              <div class="stackText stack-hash" id="stack12">mongoDB</div>
             </div>
           </div>
           <div class="toolWrapper toolEtc">
             <div class="toolHeader etc">Other</div>
             <div class="toolSec">
-              <div class="stackText stack-hash" id="stack12">Git/Gitflow</div>
-              <div class="stackText stack-hash" id="stack13">ESLint</div>
-              <div class="stackText stack-hash" id="stack14">AJAX</div>
-              <div class="stackText stack-hash" id="stack15">GraphQL</div>
-              <div class="stackText stack-hash" id="stack16">Responsive</div>
-              <div class="stackText stack-hash" id="stack17">Photoshop</div>
+              <div class="stackText stack-hash" id="stack13">Git/Gitflow</div>
+              <div class="stackText stack-hash" id="stack14">ESLint</div>
+              <div class="stackText stack-hash" id="stack15">AJAX</div>
+              <div class="stackText stack-hash" id="stack16">GraphQL</div>
+              <div class="stackText stack-hash" id="stack17">Socket.io</div>
+              <div class="stackText stack-hash" id="stack18">Responsive</div>
+              <div class="stackText stack-hash" id="stack19">Photoshop</div>
             </div>
           </div>
         </div>
@@ -146,7 +148,7 @@
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or
           rent. The design is based on Zillow.com.</p>
         <div class="built" id="built2">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, and Google Maps API</p>
+        <p class="builtWith">HTML5, CSS3, JavaScript, React, Redux, Node, Express.js, and Google Maps API</p>
         <div className="buttonWrapper">
           <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
