Updated built with

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <p class="text">E-commerce site for mattress company, The Lumbar Yard. The site allows users to search for and
           buy mattresses with any major credit card.</p>
         <div class="built" id="built1">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Hapi.js</p>
+        <p class="builtWith">HTML, CSS, JavaScript, React, Node, and Hapi.js</p>
         <div className="buttonWrapper">
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/lumbarYard" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
@@ -148,7 +148,7 @@
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or
           rent. The design is based on Zillow.com.</p>
         <div class="built" id="built2">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, React, Redux, Node, Express.js, and Google Maps API</p>
+        <p class="builtWith">HTML, CSS, JavaScript, React, Redux, Node, Express.js, and Google Maps API</p>
         <div className="buttonWrapper">
           <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
@@ -165,7 +165,7 @@
         <p class="text">Website created for café/music venue, Padmé. Allows users to view menus and upcoming shows.
           Responsive design done with CSS grid and flexbox.</p>
         <div class="built" id="built3">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, and jQuery</p>
+        <p class="builtWith">HTML, CSS, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
           <a href="/projects/padme/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/padme" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
@@ -182,7 +182,7 @@
         <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Allows users to view menus
           and details about the restaurant. Responsive layout created with CSS Grid.</p>
         <div class="built" id="builtx1">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
+        <p class="builtWith">HTML, CSS, Bootstrap, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
           <a href="/projects/hansboathouse/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/hansboathouse" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
@@ -199,7 +199,7 @@
         <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify
           to allow you to save any of the songs to a new or existing playlist.</p>
         <div class="built" id="builtx2">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
+        <p class="builtWith">HTML, CSS, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
         <div className="buttonWrapper">
           <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
@@ -216,7 +216,7 @@
         <p class="text">Want to channel-surf with YouTube videos? Now you can with the Retro YouTube Television! Each
           channel plays a different category of video. Check the channel guide for complete lineup.</p>
         <div class="built" id="builtx3">Built With:</div>
-        <p class="builtWith">HTML5, CSS3, JavaScript, jQuery, and YouTube API</p>
+        <p class="builtWith">HTML, CSS, JavaScript, jQuery, and YouTube API</p>
         <div className="buttonWrapper">
           <a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
