--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div class="navIcons">
           <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" id="mail-icon" aria-label="mail-icon"><img
               class="menuImage" src="https://www.jarrodyellets.com/images/envelope.png" alt="mail"></a>
-          <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"
+          <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menu"
             aria-label="github-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/github.png"
               alt="github"></a>
-          <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"
+          <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menu"
             aria-label="codepen-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/codepen.png"
               alt="codepen"></a>
-          <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menu"
+          <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menu"
             aria-label="twitter-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/twitter.png"
               alt="twitter"></a>
           <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener"
-            class="hvr-pop menu" aria-label="linkedin-icon"><img class="menuImage"
+            class="menu" aria-label="linkedin-icon"><img class="menuImage"
               src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
         </div>
         <div class="navLinks">
