--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="nav-bar">
       <div class="linksWrapper">
         <div class="navIcons">
-          <a href="mailto:jarrod@jarrodyellets.com" class="hvr-pop menu" id="mail-icon" aria-label="mail-icon"><img
+          <a href="mailto:jarrod@jarrodyellets.com" class="menu" id="mail-icon" aria-label="mail-icon"><img
               class="menuImage" src="https://www.jarrodyellets.com/images/envelope.png" alt="mail"></a>
           <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menu"
             aria-label="github-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/github.png"
