--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
     <div class="nav-bar">
       <div class="linksWrapper">
         <div class="navIcons">
-          <a href="mailto:jarrod@jarrodyellets.com" class="menu" id="mail-icon" aria-label="mail-icon"><img
+          <a href="mailto:jarrod@jarrodyellets.com" class="menu" title="mail" id="mail-icon" aria-label="mail-icon"><img
               class="menuImage" src="https://www.jarrodyellets.com/images/envelope.png" alt="mail"></a>
-          <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menu"
+          <a href="https://github.com/jarrodyellets" target="_blank" title="GitHub" rel="noopener" class="menu"
             aria-label="github-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/github.png"
               alt="github"></a>
-          <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menu"
+          <a href="https://codepen.io/jarrodyellets" target="_blank" title="CodePen" rel="noopener" class="menu"
             aria-label="codepen-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/codepen.png"
               alt="codepen"></a>
-          <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menu"
+          <a href="https://twitter.com/jarrodyellets" target="_blank" title="twitter" rel="noopener" class="menu"
             aria-label="twitter-icon"><img class="menuImage" src="https://www.jarrodyellets.com/images/twitter.png"
               alt="twitter"></a>
-          <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener"
-            class="menu" aria-label="linkedin-icon"><img class="menuImage"
+          <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" title="LinkedIn" rel="noopener"
+            class="menu" aria-label="LinkedIn-icon"><img class="menuImage"
               src="https://www.jarrodyellets.com/images/linkedin.png" alt="linkedin"></a>
         </div>
         <div class="navLinks">
@@ -60,7 +60,7 @@
           data-src="https://www.jarrodyellets.com/images/profilePolBlank.png" class="profileImg portfolioImgBlank"
           alt="profile">
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-          data-src="https://www.jarrodyellets.com/images/profilePol.png" class="profileImg pImg" id="pol2"
+          data-src="https://www.jarrodyellets.com/images/profilePol.png" class="profileImg pImg" id="pol4"
           alt="profile">
       </div>
       <div class="heroAbout">
