--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           data-src="https://www.jarrodyellets.com/images/profilePolBlank.png" class="profileImg portfolioImgBlank"
           alt="profile">
         <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-          data-src="https://www.jarrodyellets.com/images/profilePol.png" class="profileImg pImg" id="pol4"
+          data-src="https://www.jarrodyellets.com/images/profilePol.png" class="profileImg pImg" id="polHome"
           alt="profile">
       </div>
       <div class="heroAbout">
@@ -100,10 +100,10 @@
               <div class="stackText stack-hash" id="stack1">HTML</div>
               <div class="stackText stack-hash" id="stack2">CSS/Sass</div>
               <div class="stackText stack-hash" id="stack3">JavaScript</div>
-              <div class="stackText stack-hash" id="stack4">React</div>
-              <div class="stackText stack-hash" id="stack5">Redux</div>
-              <div class="stackText stack-hash" id="stack6">jQuery</div>
-              <div class="stackText stack-hash" id="stack7">Bootstrap</div>
+              <div class="stackText stack-hash" id="stack4">React/Redux</div>
+              <div class="stackText stack-hash" id="stack5">Vue/Vuex</div>
+              <div class="stackText stack-hash" id="stack6">Nuxt.js</div>
+              <div class="stackText stack-hash" id="stack7">jQuery</div>
               <div class="stackText stack-hash" id="stack8">Webpack</div>
             </div>
           </div>
@@ -111,21 +111,22 @@
             <div class="toolHeader back">Back-End</div>
             <div class="toolSec">
               <div class="stackText stack-hash" id="stack9">Node.js</div>
-              <div class="stackText stack-hash" id="stack10">Express.js</div>
-              <div class="stackText stack-hash" id="stack11">hapi.js</div>
+              <div class="stackText stack-hash" id="stack10">hapi.js</div>
+              <div class="stackText stack-hash" id="stack11">Express.js</div>
               <div class="stackText stack-hash" id="stack12">mongoDB</div>
             </div>
           </div>
           <div class="toolWrapper toolEtc">
             <div class="toolHeader etc">Other</div>
             <div class="toolSec">
-              <div class="stackText stack-hash" id="stack13">Git/Gitflow</div>
-              <div class="stackText stack-hash" id="stack14">ESLint</div>
-              <div class="stackText stack-hash" id="stack15">AJAX</div>
-              <div class="stackText stack-hash" id="stack16">GraphQL</div>
-              <div class="stackText stack-hash" id="stack17">Socket.io</div>
-              <div class="stackText stack-hash" id="stack18">Responsive</div>
-              <div class="stackText stack-hash" id="stack19">Photoshop</div>
+              <div class="stackText stack-hash" id="stack13">TypeScript</div>
+              <div class="stackText stack-hash" id="stack14">lab/Mocha</div>
+              <div class="stackText stack-hash" id="stack15">Git/Gitflow</div>
+              <div class="stackText stack-hash" id="stack16">ESLint</div>
+              <div class="stackText stack-hash" id="stack17">AJAX</div>
+              <div class="stackText stack-hash" id="stack18">GraphQL</div>
+              <div class="stackText stack-hash" id="stack19">Socket.io</div>
+              <div class="stackText stack-hash" id="stack20">Photoshop</div>
             </div>
           </div>
         </div>
@@ -136,21 +137,40 @@
 
   <!-- Portfolio -->
   <div class="portfolio">
-    <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-      data-src="https://www.jarrodyellets.com/images/portfolioPaper.png" class="titleImg" alt="portfolio">
+    <div class="aboutHeader">*Portfolio*</div>
     <div class="portfolioGrid">
+      <div class="portfolioItem">
+          <div class="imgWrapper">
+            <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+              data-src="https://www.jarrodyellets.com/images/hapiBlank.png" class="portfolioImg portfolioImgBlank"
+              alt="hapi.dev">
+            <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+              data-src="https://www.jarrodyellets.com/images/hapi.png" class="portfolioImg pImg" id="pol1"
+              alt="hapi.dev">
+          </div>
+          <p class="text">Built with Nuxt.js, hapi.dev is the home of the hapi.js framework.  Provides users with all of the necessary resources about the hapi.js framework.</p>
+          <div class="built" id="built1">Built With:</div>
+          <p class="builtWith">Nuxt.js,  Node, and hapi.js</p>
+          <div className="buttonWrapper">
+            <a href="https://hapi.dev" target="_blank" rel="noopener"><button
+                class="btn hvr-underline-from-left">Launch!</button></a><a
+              href="https://github.com/hapijs/hapi.dev" target="_blank" rel="noopener"><button
+                class="btn hvr-underline-from-left">View
+                Code</button></a>
+          </div>
+        </div>
       <div class="portfolioItem">
         <div class="imgWrapper">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
             data-src="https://www.jarrodyellets.com/images/lumbarPolBlank.png" class="portfolioImg portfolioImgBlank"
             alt="lumbar yard">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg pImg" id="pol1"
+            data-src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg pImg" id="pol3"
             alt="lumbar yard">
         </div>
         <p class="text">E-commerce site for mattress company, The Lumbar Yard. The site allows users to search for and
           buy mattresses with any major credit card.</p>
-        <div class="built" id="built1">Built With:</div>
+        <div class="built" id="built2">Built With:</div>
         <p class="builtWith">HTML, CSS, JavaScript, React, Node, and Hapi.js</p>
         <div className="buttonWrapper">
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button
@@ -166,100 +186,17 @@
             data-src="https://www.jarrodyellets.com/images/pillowPolBlank.png" class="portfolioImg portfolioImgBlank"
             alt="pillow real estate">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg pImg" id="pol3"
+            data-src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg pImg" id="pol2"
             alt="pillow real estate">
         </div>
         <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or
           rent. The design is based on Zillow.com.</p>
-        <div class="built" id="built2">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, React, Redux, Node, Express.js, and Google Maps API</p>
+        <div class="built" id="built3">Built With:</div>
+        <p class="builtWith">HTML, CSS, JavaScript, React, Redux, Node, and Google Maps API</p>
         <div className="buttonWrapper">
           <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button
               class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">View
-              Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <div class="imgWrapper">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/padmePolBlank.png" class="portfolioImg portfolioImgBlank"
-            alt="cafe padme">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/padmePol.png" class="portfolioImg pImg" id="pol2"
-            alt="cafe padme">
-        </div>
-        <p class="text">Website created for café/music venue, Padmé. Allows users to view menus and upcoming shows.
-          Responsive design done with CSS grid and flexbox.</p>
-        <div class="built" id="built3">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, and jQuery</p>
-        <div className="buttonWrapper">
-          <a href="/projects/padme/index.html" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/padme"
-            target="_blank" rel="noopener"><button class="btn hvr-underline-from-left">View
-              Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <div class="imgWrapper">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/hansPolBlank.png" class="portfolioImg portfolioImgBlank"
-            alt="hans boathouse">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/hansPol.png" class="portfolioImg pImg" id="pola1"
-            alt="hans boathouse">
-        </div>
-        <p class="text">Website created for Brussels seafood restaurant, Hans' Boathouse. Allows users to view menus
-          and details about the restaurant. Responsive layout created with CSS Grid.</p>
-        <div class="built" id="builtx1">Built With:</div>
-        <p class="builtWith">HTML, CSS, Bootstrap, JavaScript, and jQuery</p>
-        <div className="buttonWrapper">
-          <a href="/projects/hansboathouse/index.html" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">Launch!</button></a><a
-            href="https://github.com/jarrodyellets/hansboathouse" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">View
-              Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <div class="imgWrapper">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/jukeboxPolBlank.png" class="portfolioImg portfolioImgBlank"
-            alt="jukebox">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/jukeboxPol.png" class="portfolioImg pImg" id="pola2"
-            alt="jukebox">
-        </div>
-        <p class="text">Allows you to see and play the Billboard top ten songs from any date. Integrated with Spotify
-          to allow you to save any of the songs to a new or existing playlist.</p>
-        <div class="built" id="builtx2">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, jQuery, Node, Express.js, and Spotify API</p>
-        <div className="buttonWrapper">
-          <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">Launch!</button></a><a
-            href="https://github.com/jarrodyellets/topTenJukebox" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">View
-              Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <div class="imgWrapper">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/retroPolBlank.png" class="portfolioImg portfolioImgBlank"
-            alt="youtube tv">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/retroPol.png" class="portfolioImg pImg" id="pola3"
-            alt="youtube tv">
-        </div>
-        <p class="text">Want to channel-surf with YouTube videos? Now you can with the Retro YouTube Television! Each
-          channel plays a different category of video. Check the channel guide for complete lineup.</p>
-        <div class="built" id="builtx3">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, jQuery, and YouTube API</p>
-        <div className="buttonWrapper">
-          <a href="/projects/retroyoutube/index.html" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">Launch!</button></a><a
-            href="https://github.com/jarrodyellets/retroYouTube" target="_blank" rel="noopener"><button
               class="btn hvr-underline-from-left">View
               Code</button></a>
         </div>
@@ -270,8 +207,7 @@
 
   <!-- Contact -->
   <div class="contact">
-    <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-      data-src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg" alt="contact">
+    <div class="aboutHeader">*Contact*</div>
     <div class="contactWrapper">
       <div class="contactText">Find me at the following places:</div>
       <div class="contactIcons">
